// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Grid deve renderizar corretamente 1`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -1rem;
  margin-right: -1rem;
  height: 100%;
}

@media (max-width:1280px) {
  .emotion-0 {
    margin-left: -0.5rem;
    margin-right: -0.5rem;
  }
}

<div
  class="emotion-0"
>
  Content
</div>
`;

exports[`Grid deve renderizar corretamente 2`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -1rem;
  margin-right: -1rem;
  height: 100%;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
}

@media (max-width:1280px) {
  .emotion-0 {
    margin-left: -0.5rem;
    margin-right: -0.5rem;
  }
}

<div
  class="emotion-0"
>
  Content
</div>
`;

exports[`Grid deve renderizar corretamente 3`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  margin-left: -1rem;
  margin-right: -1rem;
  height: 100%;
}

@media (max-width:1280px) {
  .emotion-0 {
    margin-left: -0.5rem;
    margin-right: -0.5rem;
  }
}

<div
  class="emotion-0"
>
  Content
</div>
`;

exports[`Grid deve renderizar corretamente 4`] = `
.emotion-0 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-left: -1rem;
  margin-right: -1rem;
  height: 100%;
}

@media (max-width:1280px) {
  .emotion-0 {
    margin-left: -0.5rem;
    margin-right: -0.5rem;
  }
}

<div
  class="emotion-0"
>
  Content
</div>
`;

exports[`Grid deve renderizar corretamente 5`] = `
.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  margin-left: -1rem;
  margin-right: -1rem;
  height: 100%;
}

@media (max-width:1280px) {
  .emotion-0 {
    margin-left: -0.5rem;
    margin-right: -0.5rem;
  }
}

<div
  class="emotion-0"
>
  Content
</div>
`;
